--- a/public/index.html
+++ b/public/index.html
@@ -1,39 +1,40 @@
-<!doctype html>
-<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
-<!--[if lt IE 7]>
-<html class="no-js lt-ie9 lt-ie8 lt-ie7 ui-mobile-rendering" lang="en"> <![endif]-->
-<!--[if IE 7]>
-<html class="no-js lt-ie9 lt-ie8 ui-mobile-rendering" lang="en"> <![endif]-->
-<!--[if IE 8]>
-<html class="no-js lt-ie9 ui-mobile-rendering" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js ui-mobile-rendering" lang="en"> <!--<![endif]-->
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
-    <title>Marionette-Require-Boilerplate Lite</title>
-    <meta name="description" content="Lightweight Marionette and Require.js Boilerplate Project">
-
-    <!-- Mobile viewport optimized: h5bp.com/viewport -->
-    <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width">
-
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Marionette-Require-Boilerplate Trimmed</title>
+    <meta name="description" content="Trimmed Lightweight Marionette and Require.js Boilerplate Project">
+    <meta name="viewport" content="width=device-width">
+    
+    <link rel="stylesheet" type="text/css" href="css/normalize.min.css"/>
     <!--Change to app.min.css for production-->
     <link rel="stylesheet" type="text/css" href="css/app.css"/>
-
-    <!--Change to Init.min.js below for production-->
-    <script type="text/javascript" src="js/libs/require.js" data-main="js/app/config/Init.js"></script>
-    <!--<script type="text/javascript" src="js/app/config/Init.min.js"></script>-->
-
-
+    <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
     <div data-role="page">
         <header></header>
-        <div id="main" class="container-fluid"></div>
-        <footer class="footer navbar navbar-fixed-bottom">
+        <div id="main"></div>
+        <footer>
             <p>
-                Written by <a href="https://github.com/brettjonesdev" target="_blank">Brett Jones</a> of <a href="https://github.com/BoilerplateMVC">BoilerplateMVC</a>
+                Based on BoilerplateMVC by <a href="https://github.com/brettjonesdev" target="_blank">Brett Jones</a> of <a href="https://github.com/BoilerplateMVC">BoilerplateMVC</a>
             </p>
         </footer>
     </div>
+
+    <!--Change to Init.min.js below for production-->
+    <!--<script type="text/javascript" src="js/app/config/Init.min.js"></script>-->
+    <script type="text/javascript" src="js/libs/require.js" data-main="js/app/config/Init.js"></script>
+
+    <script>
+        var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
+        (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+        g.src='//www.google-analytics.com/ga.js';
+        s.parentNode.insertBefore(g,s)}(document,'script'));
+    </script>
 </body>
 </html>
