fixing modernizr path

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.min.css"/>
     <!--Change to app.min.css for production-->
     <link rel="stylesheet" type="text/css" href="css/app.css"/>
-    <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+    <script src="js/libs/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
     <div data-role="page">
