--- a/public/index.html
+++ b/public/index.html
@@ -3,38 +3,40 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Marionette-Require-Boilerplate Trimmed</title>
-    <meta name="description" content="Trimmed Lightweight Marionette and Require.js Boilerplate Project">
-    <meta name="viewport" content="width=device-width">
-    
-    <link rel="stylesheet" type="text/css" href="css/normalize.min.css"/>
-    <!--Change to app.min.css for production-->
-    <link rel="stylesheet" type="text/css" href="css/app.css"/>
-    <script src="js/libs/modernizr-2.6.2.min.js"></script>
-</head>
-<body>
-    <div data-role="page">
-        <header></header>
-        <div id="main"></div>
-        <footer>
-            <p>
-                Based on BoilerplateMVC by <a href="https://github.com/brettjonesdev" target="_blank">Brett Jones</a> of <a href="https://github.com/BoilerplateMVC">BoilerplateMVC</a>
-            </p>
-        </footer>
-    </div>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>Marionette and Require Lite Boilerplate</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--Change to Init.min.js below for production-->
-    <!--<script type="text/javascript" src="js/app/config/Init.min.js"></script>-->
-    <script type="text/javascript" src="js/libs/require.js" data-main="js/app/config/Init.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/normalize.min.css"/>
+        <!--Change to <link rel="stylesheet" type="text/css" href="css/app.min.css"/> for production-->
+        <link rel="stylesheet" type="text/css" href="css/app.css"/>
 
-    <script>
-        var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-        (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-        g.src='//www.google-analytics.com/ga.js';
-        s.parentNode.insertBefore(g,s)}(document,'script'));
-    </script>
-</body>
+        <script src="js/libs/modernizr/modernizr.js"></script>
+    </head>
+    <body>
+        <div data-role="page">
+            <header></header>
+            <div id="main"></div>
+            <footer>
+                <p>
+                    Based on BoilerplateMVC by <a href="https://github.com/brettjonesdev" target="_blank">Brett Jones</a> of <a href="https://github.com/BoilerplateMVC">BoilerplateMVC</a>
+                </p>
+            </footer>
+        </div>
+
+        <!--Change to Init.min.js below for production-->
+        <!--<script type="text/javascript" src="js/app/config/Init.min.js"></script>-->
+        <script type="text/javascript" src="js/libs/requirejs/require.js" data-main="js/app/config/Init.js"></script>
+        <script>
+            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+            e.src='//www.google-analytics.com/analytics.js';
+            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+            ga('create','UA-XXXXX-X');ga('send','pageview');
+        </script>
+    </body>
 </html>
